--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,47 @@
+aiohttp==3.8.3
+aiosignal==1.3.1
 anyio==3.6.2
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.1.0
+async-timeout==4.0.2
 attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
 CacheControl==0.12.11
 cachy==0.3.0
+catboost==1.1.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 cleo==1.0.0a5
+clikit==0.6.2
+cmdstanpy==0.9.5
 contourpy==1.0.6
+convertdate==2.4.0
 crashtest==0.3.1
 cryptography==37.0.4
 cycler==0.11.0
+Cython==0.29.32
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.6
 dulwich==0.20.46
 entrypoints==0.4
+ephem==4.1.3
 executing==1.2.0
 fastjsonschema==2.16.2
 filelock==3.8.0
 fonttools==4.38.0
+frozenlist==1.3.3
+graphviz==0.20.1
+hijri-converter==2.2.4
+holidays==0.17
 html5lib==1.1
+httpstan==4.8.2
 idna==3.4
 ipykernel==6.17.0
 ipython==8.6.0
@@ -47,13 +62,18 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.3
 keyring==23.9.3
 kiwisolver==1.4.4
+korean-lunar-calendar==0.3.1
+lightgbm==3.3.3
 lockfile==0.12.2
+LunarCalendar==0.0.9
 MarkupSafe==2.1.1
+marshmallow==3.19.0
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
 more-itertools==8.14.0
 msgpack==1.0.4
+multidict==6.0.2
 nbclassic==0.4.8
 nbclient==0.7.0
 nbconvert==7.2.3
@@ -66,15 +86,18 @@ packaging==21.3
 pandas==1.5.1
 pandocfilters==1.5.0
 parso==0.8.3
+pastel==0.2.1
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
-pipenv==2022.11.5
+pipenv==2022.11.11
 pkginfo==1.8.3
 platformdirs==2.5.2
+plotly==5.11.0
 poetry==1.2.2
 poetry-core==1.3.2
-poetry-plugin-export==1.1.2
+poetry-plugin-export==1.2.0
 prometheus-client==0.15.0
 prompt-toolkit==3.0.32
 psutil==5.9.4
@@ -83,8 +106,11 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
 pylev==1.4.0
+PyMeeus==0.5.11
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pysimdjson==3.2.0
+pystan==3.5.0
 python-dateutil==2.8.2
 pytz==2022.6
 pyzmq==24.0.1
@@ -97,21 +123,28 @@ scipy==1.9.3
 seaborn==0.12.1
 SecretStorage==3.3.3
 Send2Trash==1.8.0
+setuptools-git==1.2
 shellingham==1.5.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.0
+statsmodels==0.13.5
+tenacity==8.1.0
 terminado==0.17.0
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 tomlkit==0.11.5
 tornado==6.2
+tqdm==4.64.1
 traitlets==5.5.0
 urllib3==1.26.12
-virtualenv==20.16.6
+virtualenv==20.16.7
 virtualenv-clone==0.5.7
 wcwidth==0.2.5
+webargs==8.2.0
 webencodings==0.5.1
 websocket-client==1.4.2
 widgetsnbextension==4.0.3
+xgboost==1.7.1
+yarl==1.8.1
